BusOne/src/objects/Cycle_Plan_Detail_vod__c.object
<CustomObject>
    <description>For each Cycle_Plan_Target, it will hold the number of planned and actual calls, per product.</description>
    <fields>
        <fullName>Actual_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of actual details made for the account-product combination. This field will be updated automatically as details are made.</description>
        <label>Actual Details</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attainment_vod__c</fullName>
        <formula>IF(Planned_Details_vod__c &gt; 0, Actual_Details_vod__c/Planned_Details_vod__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attainment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cycle_Plan_Target_vod__c</fullName>
        <description>The Cycle Plan target against which the Details are made.</description>
        <label>Target</label>
        <referenceTo>Cycle_Plan_Target_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan Details</relationshipLabel>
        <relationshipName>Cycle_Plan_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Planned_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of planned details for the account-product combination. This field will generally be data loaded.</description>
        <label>Planned_Details</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_vod__c</fullName>
        <description>Indicates the detailing priority for the targeted product.</description>
        <label>Priority</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Catalog</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Cycle Plan Details</relationshipLabel>
        <relationshipName>Cycle_Plan_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_vod__c</fullName>
        <description>The remaining number of calls the user must complete in the Cycle Plan period to achieve their planned call objective for a product and the targeted account.  Default value is 0.</description>
        <formula>IF(AND(ISBLANK(Planned_Details_vod__c ),ISBLANK(Actual_Details_vod__c)),0
                  ,IF(ISBLANK(Actual_Details_vod__c) ,Planned_Details_vod__c 
                      , IF(ISBLANK(Planned_Details_vod__c ),0
                            , IF((Planned_Details_vod__c -Actual_Details_vod__c)&gt;=0,
                                     Planned_Details_vod__c -Actual_Details_vod__c,
                                     0)
                        )
                    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of details for the product scheduled by the user against the Cycle Plan Target.</description>
        <label>Scheduled Details</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of actual details made for the product against a Cycle Plan Target by the team of representatives.</description>
        <label>Actual Total Details</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Attainment_vod__c</fullName>
        <description>It holds the overall product detail attainment across the team for the product against a Cycle Plan Target.</description>
        <formula>IF( Total_Planned_Details_vod__c &gt; 0,  Total_Actual_Details_vod__c / Total_Planned_Details_vod__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attainment Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of details for the product planned by the team of representatives against the Cycle Plan Target.</description>
        <label>Planned Total Details</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_vod__c</fullName>
        <description>The remaining number of calls the team must complete in the Cycle Plan period to achieve their planned call objective for a product and the targeted account.  Default value is 0.</description>
        <formula>IF(AND(ISBLANK(Total_Planned_Details_vod__c ),ISBLANK(Total_Actual_Details_vod__c)),0
                  ,IF(ISBLANK(Total_Actual_Details_vod__c) ,Total_Planned_Details_vod__c 
                      , IF(ISBLANK(Total_Planned_Details_vod__c ),0
                            , IF((Total_Planned_Details_vod__c -Total_Actual_Details_vod__c)&gt;=0,
                                     Total_Planned_Details_vod__c -Total_Actual_Details_vod__c,
                                     0)
                        )
                    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Scheduled_Details_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>It holds the number of details for the product scheduled by the team of representatives against the Cycle Plan Target.</description>
        <label>Scheduled Total Details</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cycle Plan Detail</label>
    <nameField>
        <displayFormat>CPD-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Plan Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PlannedDetailsLessThan0</fullName>
        <active>true</active>
        <description>Planned Details can not be less than 0.</description>
        <errorConditionFormula>Planned_Details_vod__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Actual_Details_vod__c</errorDisplayField>
        <errorMessage>Planned Details can not be less than 0.</errorMessage>
    </validationRules>
</CustomObject>